--- a/index.html
+++ b/index.html
@@ -2,12 +2,62 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Барбершоп</title>
-    <link rel="stylesheet" href="css/test.css">
+    <title>Барбершоп</title>
   </head>
   <body>
+  <header class="main-header">
+    <div class="container">
+      <nav class="main-navigation">
+        <ul>
+          <li>
+            <a href="#">Информаиця</a>
+          </li>
+          <li>
+            <a href="#">Новости</a>
+          </li>
+          <li>
+            <a href="#">Прайс-лист</a>
+          </li>
+          <li>
+            <a href="#">Магазин</a>
+          </li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
+        <div class="user-block">
+          <a class="login" href="#">Вход</a>
+        </div>
+
+      </div>
+    </header>
+
+    <main class="container">
+      <div class="index-logo">
+        <img src="#" alt="Логотип Барбершоп" width="368" height="204" >
+      </div><br/>
+
+      <section class="features">
+        <div class="features-item">
+          <b class="features-name">Быстро</b>
+          <p>Мы делаем свою работу быстро! Два часа пролетят незаметно
+          и вы - обладатель стильной стрижки-минутки!</p>
+        </div>
+        <div class="features-item">
+          <b class="features-name">Круто</b>
+          <p>Забудьте, как стриглись раньше. Теперь мы сделаем из вас
+          звезду кино. Во всяком случае внешне!</p>
+        </div>
+        <div class="features-item">
+          <b class="features-name">Дорого</b>
+          <p>Наши мастера - профессионалы своего дела и не могут стоить дешёво.
+            К тому же, разве цена не дает иной статус?!</p>
+        </div>
+
+      </section>
+    </main>
 
   </body>
 </html>
